# xserializer

./: .gitignore  CMakeLists.txt  README.md
documentation/: AdvancedUsage.md  ExampleWalkthrough.md  FAQ.md  GettingStarted.md  Introduction.md  MemoryManagement.md  SerializationBasics.md  ThreeStageLoading.md
source/: xserializer.cpp  xserializer.h
source/implementation/: xserializer_inline.h
source/unittest/: xserializer_unittest.h
